--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <div class="columns is-centered  is-mobile">
+        <div class="columns is-centered  is-mobile is-gapless">
             <div class="column is-three-quarters mt-5 ">
                 <h1 class="mb-2">Create your todo list:</h1>
                 <form id="formtodo" action="">
